<resources>
    <string name="app_name">WhereTo</string>
    <string name="suche">Suche</string>
    <string name="reservierungen">Reservierungen</string>
    <string name="chat">Chat</string>
    <string name="bewertungen">Bewertungen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="impressium">Impressium</string>
    <string name="abmelden">Abmelden</string>
    <string name="max_mustermann">Max Mustermann</string>
    <string name="Impressium" />
    <string name="menu">menu</string>
    <string name="logo" />
    <string name="umkreis">Umkreis</string>
    <string name="_100_km">100 km</string>
    <string name="_20_km">20 km</string>
    <string name="_40_km">40 km</string>
    <string name="_60_km">60 km</string>
    <string name="_80_km">80 km</string>
    <string name="restaurant_suchen">Zufälliges Restaurant suchen</string>
    <string name="km">km</string>
    <string name="filter">Filter anpassen</string>
    <string name="restaurantListe_anzeigen">Restaurantliste anzeigen</string>
    <string name="letzte_treffer">Letzte Treffer</string>
    <string name="mehr_anzeigen">mehr anzeigen</string>
    <string name="filter_anwenden">Filter anwenden</string>
    <string name="art">Art</string>
    <string name="kueche">Küche</string>
    <string name="preis">Preis</string>
    <string name="italienisch">Italienisch</string>
    <string name="spanisch">Spanisch</string>
    <string name="mexikanisch">Mexikanisch</string>
    <string name="deutsch">Deutsch</string>
    <string name="t_rkisch">Türkisch</string>
    <string name="asiatisch">Asiatisch</string>
    <string name="todo">TODO</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="freunde_einladen">Freunde einladen</string>
    <string name="plaetze_reservieren">Plätze reservieren</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="strasse">Straße</string>
    <string name="plz_und_stadt">PLZ und Stadt</string>
    <string name="beliebig">beliebig</string>
    <string name="open" />
    <string-array name="art_array">
        <item>beliebig</item>
        <item>vegetarisch</item>
        <item>vegan</item>
    </string-array>
    <string-array name="preis_array">
        <item>beliebig</item>
        <item>niedrig</item>
        <item>mittel</item>
        <item>hoch</item>
    </string-array>
    <string name="api_key">AIzaSyBv0Au4qoo8l26E5KJ1nQA_TY_8RGCocg8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_liste">Restaurant Liste</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="profil_anlegen">Profil anlegen</string>
    <string name="passwort">Passwort *</string>
    <string name="username">Username *</string>
    <string name="registrierung">Registrierung</string>
    <string name="registrieren">Registrieren</string>
    <string name="login">Login</string>
    <string name="passwort_vergessen">Passwort vergessen</string>
    <string name="where_to">Where to ...?</string>
    <string name="passwort2">Passwort</string>
    <string name="email2">Email</string>
    <string name="neues_passwort">Neues Passwort</string>
    <string name="or">OR</string>
    <string name="back">back</string>
    <string name="api_key">api_key</string>
    <string name="logout">Logout</string>
</resources>
