<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:title="  "></item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/suche" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_event"
            android:title="@string/reservierungen" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_star"
            android:title="@string/bewertungen" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/einstellungen"/>
        <item android:title="  "></item>

        <item android:title="@string/Impressium" >
            <menu>
                <group android:checkableBehavior="single" android:menuCategory="container">
                    <item
                        android:id="@+id/impressium"
                        android:title="@string/impressium"
                        app:showAsAction="always"/>
                </group>
            </menu>
        </item>
    </group>
</menu>