<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/layout_seekbar_interval_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:layout_editor_absoluteY="130dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_20_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_40_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_60_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_80_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_100_km"
            android:textSize="14sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/slider"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="385dp"
        android:layout_height="15dp"
        android:max="100"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/shape_seekbar"
        android:stepSize="20"
        android:thumbTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_seekbar_interval_holder" />

    <TextView
        android:id="@+id/textView"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:labelFor="@id/slider"
        android:text="@string/umkreis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="112dp"
        android:gravity="end"
        android:labelFor="@id/slider"
        android:text="@string/km"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/dropdown_art"
        android:layout_width="222dp"
        android:layout_height="29dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/shape_dropdown"
        android:drawSelectorOnTop="true"
        android:entries="@array/art_array"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        android:theme="@style/dropdown_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:text="@string/kueche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="129dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/dropdown_art"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_art">

        <RadioButton
            android:id="@+id/radio_italienisch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:checked="true"

            android:text="@string/italienisch" />

        <RadioButton
            android:id="@+id/radio_spanisch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:text="@string/spanisch" />

        <RadioButton
            android:id="@+id/radio_mexikanisch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:text="@string/mexikanisch" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="129dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/dropdown_preis"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_art">

        <RadioButton
            android:id="@+id/radio_deutsch"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:text="@string/deutsch" />

        <RadioButton
            android:id="@+id/radio_asiatisch"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:text="@string/asiatisch" />

        <RadioButton
            android:id="@+id/radio_türkisch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radio_button"
            android:text="@string/t_rkisch" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="416dp"
        android:text="@string/preis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/dropdown_preis"
        android:layout_width="222dp"
        android:layout_height="29dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/shape_dropdown"
        android:drawSelectorOnTop="true"
        android:entries="@array/preis_array"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        android:theme="@style/dropdown_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/buttonEnabled"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/shape_button"
        android:elevation="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/filter_anwenden"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="668dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>