<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:id="@+id/start">

    <LinearLayout
        android:id="@+id/layout_seekbar_interval_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_20_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_40_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_60_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_80_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_100_km"
            android:textSize="14sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/slider"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="385dp"
        android:layout_height="15dp"
        android:max="100"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/shape_seekbar"
        android:stepSize="20"
        android:thumbTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_seekbar_interval_holder" />

    <TextView
        android:id="@+id/textView"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:labelFor="@id/slider"
        android:text="@string/umkreis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/random" />

    <TextView
        android:id="@+id/textView3"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:labelFor="@id/slider"
        android:text="@string/letzte_treffer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/show_restaurant" />

    <TextView
        android:id="@+id/textView2"
        style="@style/description"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="184dp"
        android:gravity="right"
        android:labelFor="@id/slider"
        android:text="@string/km"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/random"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/random"
        style="@style/buttonEnabled"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_button_random"
        android:elevation="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/restaurant_suchen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter"
        style="@style/clickableString"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider" />

    <TextView
        android:id="@+id/show_more"
        style="@style/clickableString"
        android:layout_width="215dp"
        android:layout_height="29dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="104dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/mehr_anzeigen"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@id/show_restaurant" />

    <TextView
        android:id="@+id/show_restaurant"
        style="@style/clickableString"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/restaurantListe_anzeigen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filter" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="357dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/show_restaurant" />
</androidx.constraintlayout.widget.ConstraintLayout>