<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/layout_seekbar_interval_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="180dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_20_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_40_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_60_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_80_km"
            android:textSize="14sp" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/_100_km"
            android:textSize="14sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/simpleSeekBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="385dp"
        android:layout_height="15dp"
        android:max="100"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/shape_seekbar"
        android:stepSize="20"
        android:thumbTint="@android:color/white"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/description"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:labelFor="@id/simpleSeekBar"
        android:text="@string/umkreis"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="120dp" />

    <Button
        android:id="@+id/button"
        style="@style/buttonEnabled"
        android:elevation="8dp"
        android:textAlignment="center"
        android:layout_width="211dp"
        android:layout_height="91dp"
        android:background="@color/colorPrimary"
        android:text="@string/restaurant_suchen"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="304dp" />
</androidx.constraintlayout.widget.ConstraintLayout>