<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_edit_background">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/registrierung"
        android:textColor="@color/colorMainText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/username"
        android:padding="10dp"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="293dp" />

    <EditText
        android:id="@+id/passwort"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="368dp" />

    <Button
        android:id="@+id/btn_registriere"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/buttonEnabled"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:text="@string/profil_anlegen"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="568dp" />

</androidx.constraintlayout.widget.ConstraintLayout>